@@ -1,8 +1,8 @@
 Package: GGIR
 Type: Package
 Title: GGIR
-Version: 1.0-3
-Date: 2014-3-27
+Version: 1.0-4
+Date: 2014-4-29
 Author: Vincent T van Hees [aut, cre], Zhou Fang [ctb], Jing Hua Zhao [ctb] 
 Maintainer: Vincent T van Hees <vincent.van-hees@newcastle.ac.uk>
 Description: GGIR is a tool to process multi-day raw acceleration data
@@ -10,7 +10,7 @@ License: LGPL (>= 2.0, < 3)
 Suggests: MASS, signal, seewave, zoo, mmap, bitops
 Depends: stats, utils, R (>= 2.10)
 Imports: GENEAread, matlab
-Packaged: 2014-03-27 10:49:11 UTC; nvhv
+Packaged: 2014-04-29 15:18:57 UTC; nvhv
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-03-27 12:04:51
+Date/Publication: 2014-04-29 17:46:59
