@@ -1,17 +1,17 @@
-b057cff95f837352e61256164412bd5e *DESCRIPTION
+f0e813f861d34c946827a2a70b959be0 *DESCRIPTION
 8ff564086915c45cbe38d6800cc9c610 *NAMESPACE
-ce6413f8c1925ce7146048199380b309 *R/g.analyse.R
+0e1f7dc9cae83d05e07f6bc6fb6bba13 *R/g.analyse.R
 a5ad9b1ea3e5fd32dbcd457e1229714b *R/g.binread.R
-15efc62778b11ca78b0df600e93f400f *R/g.calibrate.R
+cd20ec2e00669e1d5be7d6a146a48bf9 *R/g.calibrate.R
 1b85a94cb6bc26fd3579096420b18d6d *R/g.createcoordinates.R
 c502d4b3edd0ad03939ea94406bbee55 *R/g.detecmidnight.R
 f11896e8ad46c7f5b238dc7cd1a18bf2 *R/g.dotorcomma.R
 3caca92b4b347ad8a9bb9217210c28ed *R/g.downsample.R
 dff3ff4340806bf580803d2b489a8d82 *R/g.extractheadervars.R
 14db468d1f4eba7f2fe8f1e2881c8b63 *R/g.getM5L5.R
-3fe15587db07639e47ec21e2d753e3ca *R/g.getmeta.R
+dac73e0c5308c5256bb9243294344345 *R/g.getmeta.R
 786b6a66c04aa286d0b1abebb4dc7017 *R/g.impute.R
-4ccca8bbc7bea88ba259951570996568 *R/g.inspectfile.R
+5c4e15c8cc88d9cd239bbb26f93fdbce *R/g.inspectfile.R
 bd65e8b4c0dbc091dcc8759ccbb34636 *R/g.metric.R
 dd8d97fba64c7263e5a46cf842788522 *R/g.plot.R
 0bc609fbdf5973671e6ec77bd9c7a0dc *R/g.weardec.R
@@ -19,15 +19,15 @@ dd8d97fba64c7263e5a46cf842788522 *R/g.plot.R
 5e07c17c608dee884ea2ad0a1bfa159f *data/data.getmeta.RData
 0cb14c60e18f5bd4c15fb942c95aea2b *data/data.inspectfile.RData
 d93cbf2daebf37aa8fb30f5fcea2ff79 *data/datalist
-1050cd36d0391158bfd5100de77bcfdc *inst/NEWS.Rd
-ebce32ad3e61d89ea3eca15fcda0e0cb *man/GGIR-package.Rd
+0b9f09882c554b7c7af4c4d3dfb3a19e *inst/NEWS.Rd
+fd50351ce6ed2174ccfefbfdbf60088c *man/GGIR-package.Rd
 8516da773298c62a15237a92d9583b87 *man/data.calibrate.Rd
 b54ecafe06099b398351eb3bc12e4d3f *man/data.getmeta.Rd
 247abe86085bdbdd069fc9ce8e170177 *man/data.inspectfile.Rd
-730e32dfb02dfbac6ef3fdd0cad87558 *man/g.analyse.Rd
+7b989b0a72a8d99609db34f94d90519c *man/g.analyse.Rd
 2acc1f22454112ac8ae9d9ad71e8551d *man/g.binread.Rd
 b48a5c782b3f43b08318c70d6aae5fca *man/g.calibrate.Rd
-6d24c40846c10d494842f16f339327bb *man/g.getmeta.Rd
+207e66950e7a77e1dbd35d7c6f9465bb *man/g.getmeta.Rd
 b7e2be4ffe2839f74a4355e120e2a647 *man/g.impute.Rd
-78593b7fdbe7c9c9b6f189b6f91a6b0c *man/g.inspectfile.Rd
+048ec65df0291b2cf26b749590eb4b61 *man/g.inspectfile.Rd
 f761bb51990cc42ac867616e0472c9f1 *man/g.plot.Rd
